<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:id="@+id/listFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtTotalLabel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center_vertical"/>

            <TextView
                android:id="@+id/txtTotalPrice"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="$0.00"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center_vertical|end"/>

        </LinearLayout>

        <Spinner
            android:id="@+id/spinnerProductos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp" />

        <Button
            android:id="@+id/btnAddProducto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_add_producto_to_list"
            android:layout_marginTop="24dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/list_title"
            android:textSize="24sp"
            android:gravity="center"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/listLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!-- Aquí se mostrarán los productos dinámicamente -->
            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</FrameLayout>